link whatsapp atualizado

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="redesSocias">
                     <ul>
-                        <li><a href="https://api.whatsapp.com/message/GKKXVJN6D4OFK1?autoload=1&app_absent=0"><img src="./img/whatsapp.png" alt="link para whatsapp" >Whatsapp</a> </li>
+                        <li><a href="https://l.instagram.com/?u=https%3A%2F%2Fwa.me%2Fmessage%2FGKKXVJN6D4OFK1&e=AT3tM6isto9vhbCIu6YjtUzzk6er4wsOnO9nhOJkd9amqfn17i5y59gZ6xPHr_jcydXL5EJdyqYVFNVGM9qJ6d0RkSRsbD77VMAimPXFc_8tMfMW0Mkm5Q"><img src="./img/whatsapp.png" alt="link para whatsapp" >Whatsapp</a> </li>
                         <li><a href="https://www.instagram.com/docesda_narah?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="./img/instagram.png" alt="link para o instagram" >Instagram</a></li>
                     </ul>
                 </div>
